spectec/test/elab/neg/type-clause-arg-arity-mismatch.spectec
;; A def clause's argument count disagrees with its dec declaration.

dec $f(nat) : nat
def $f(x, y) = x
